--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -4,12 +4,13 @@
 	Layout = null;
 }
 <style>
-body{
-    background-color: #000;
-    color: #fff;
+body {
+	background-color: #222;
+	color: #fff;
 }
-
+h1 {
+	text-align: center;
+}
 </style>
-<center>
-<h1>High 5, you rock!</h1>
-</center>
+
+<h1>High 5, You Rock!</h1>
